cy.setPosition(<igraphLayout>) now added

--- a/self-contained-notebooks/simple/simple.ipynb
+++ b/self-contained-notebooks/simple/simple.ipynb
@@ -945,8 +945,7 @@
    },
    "outputs": [],
    "source": [
-    "cy = cyjsWidget()\n",
-    "#cy"
+    "cy = cyjsWidget()"
    ]
   },
   {
@@ -970,28 +969,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<igraph.Graph at 0x104d76318>"
-      ]
-     },
-     "execution_count": 303,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "g"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 304,
    "metadata": {
     "collapsed": false
@@ -1003,7 +980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 321,
    "metadata": {
     "collapsed": false
    },
@@ -1011,17 +988,6 @@
    "source": [
     "cy.layout(\"breadthfirst\")\n",
     "cy.fit(100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 306,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "cy.setPosition(gLayout)"
    ]
   },
   {
@@ -1041,18 +1007,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": 323,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "cy.setPosition(g.layout(\"circle\"))"
+    "cy.setPosition(g.layout(\"circle\"))\n",
+    "cy.fit(100)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 324,
    "metadata": {
     "collapsed": false
    },
@@ -1081,8 +1048,8 @@
     "   print(\"---- %s\" % strategy)\n",
     "   layout = g.layout(strategy)\n",
     "   cy.setPosition(layout)\n",
-    "   cy.fit()\n",
-    "   time.sleep(2)"
+    "   cy.fit(100)\n",
+    "   time.sleep(1)"
    ]
   },
   {
