now figures out edgeType from names of nodes - a quick hack

--- a/self-contained-notebooks/simple/simple.ipynb
+++ b/self-contained-notebooks/simple/simple.ipynb
@@ -31,6 +31,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import re"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {
     "collapsed": true
@@ -147,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 389,
    "metadata": {
     "collapsed": false
    },
@@ -173,7 +184,7 @@
        "   {'data': {'id': '7', 'name': 'R_SUCOASm'}}]}}"
       ]
      },
-     "execution_count": 258,
+     "execution_count": 389,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 390,
    "metadata": {
     "collapsed": false
    },
@@ -203,13 +214,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 422,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sourceNode: M_10fthf6glu_m\n",
+      "sourceNode: R_FPGS9m\n",
+      "sourceNode: R_FPGS9m\n",
+      "sourceNode: R_FPGS9m\n",
+      "sourceNode: M_pi_m\n",
+      "sourceNode: M_pi_m\n",
+      "sourceNode: M_pi_m\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['substrateFor',\n",
+       " 'produces',\n",
+       " 'produces',\n",
+       " 'produces',\n",
+       " 'substrateFor',\n",
+       " 'substrateFor',\n",
+       " 'substrateFor']"
+      ]
+     },
+     "execution_count": 422,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "for edge in g.es:\n",
+    "   sourceNode = g.vs[edge.tuple[0]]['name']\n",
+    "   print(\"sourceNode: %s\" % sourceNode)\n",
+    "   if(re.search(\"^M_\", sourceNode)):\n",
+    "      edge['edgeType'] = 'substrateFor'\n",
+    "   else:\n",
+    "      edge['edgeType'] = 'produces'\n",
+    "g.es()['edgeType']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 423,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "import re\n",
+    "\n",
     "metabolites = [i for i,j in enumerate(g.vs['name']) if re.search(\"^M_\", j)]\n",
     "reactions = [i for i,j in enumerate(g.vs['name']) if re.search(\"^R_\", j)]\n",
     "g.vs()[metabolites]['type'] = \"metabolite\"\n",
@@ -219,32 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'[{\"id\": 0, \"y\": -1.2981036242863813, \"x\": -1.6761992385563163}, {\"id\": 1, \"y\": -1.4281932727972664, \"x\": -0.5346324909642692}, {\"id\": 2, \"y\": -2.2766701028273424, \"x\": 0.23334124289011668}, {\"id\": 3, \"y\": -2.4092115924563418, \"x\": -1.0471332858421436}, {\"id\": 4, \"y\": -0.3793311876875062, \"x\": -0.003878720674612843}, {\"id\": 5, \"y\": 0.46966190583331924, \"x\": -0.7770848017164714}, {\"id\": 6, \"y\": 0.6035396673125726, \"x\": 0.5046770142731861}, {\"id\": 7, \"y\": -0.5084878092646536, \"x\": 1.1359003622644503}]'"
-      ]
-     },
-     "execution_count": 282,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tblPos = []\n",
-    "for i in range(0, len(gLayout)):\n",
-    "   tblPos.append({\"id\": i, \"x\": gLayout[i][0], \"y\": gLayout[i][1]})\n",
-    "json.dumps(tblPos)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 426,
    "metadata": {
     "collapsed": false
    },
@@ -253,48 +287,61 @@
      "data": {
       "text/plain": [
        "{'data': {},\n",
-       " 'elements': {'edges': [{'data': {'flux': 340, 'source': '0', 'target': '1'}},\n",
-       "   {'data': {'flux': 95, 'source': '1', 'target': '2'}},\n",
-       "   {'data': {'flux': 975, 'source': '1', 'target': '3'}},\n",
-       "   {'data': {'flux': 198, 'source': '1', 'target': '4'}},\n",
-       "   {'data': {'flux': 653, 'source': '4', 'target': '5'}},\n",
-       "   {'data': {'flux': 694, 'source': '4', 'target': '6'}},\n",
-       "   {'data': {'flux': 505, 'source': '4', 'target': '7'}}],\n",
+       " 'elements': {'edges': [{'data': {'edgeType': 'substrateFor',\n",
+       "     'flux': 959,\n",
+       "     'source': '0',\n",
+       "     'target': '1'}},\n",
+       "   {'data': {'edgeType': 'produces',\n",
+       "     'flux': 235,\n",
+       "     'source': '1',\n",
+       "     'target': '2'}},\n",
+       "   {'data': {'edgeType': 'produces',\n",
+       "     'flux': 944,\n",
+       "     'source': '1',\n",
+       "     'target': '3'}},\n",
+       "   {'data': {'edgeType': 'produces',\n",
+       "     'flux': 169,\n",
+       "     'source': '1',\n",
+       "     'target': '4'}},\n",
+       "   {'data': {'edgeType': 'substrateFor',\n",
+       "     'flux': 421,\n",
+       "     'source': '4',\n",
+       "     'target': '5'}},\n",
+       "   {'data': {'edgeType': 'substrateFor',\n",
+       "     'flux': 326,\n",
+       "     'source': '4',\n",
+       "     'target': '6'}},\n",
+       "   {'data': {'edgeType': 'substrateFor',\n",
+       "     'flux': 533,\n",
+       "     'source': '4',\n",
+       "     'target': '7'}}],\n",
        "  'nodes': [{'data': {'id': '0',\n",
        "     'name': 'M_10fthf6glu_m',\n",
-       "     'type': 'metabolite'},\n",
-       "    'position': {'x': -167.6199238556316, 'y': -129.81036242863811}},\n",
-       "   {'data': {'id': '1', 'name': 'R_FPGS9m', 'type': 'reaction'},\n",
-       "    'position': {'x': -53.46324909642692, 'y': -142.81932727972665}},\n",
+       "     'type': 'metabolite'}},\n",
+       "   {'data': {'id': '1', 'name': 'R_FPGS9m', 'type': 'reaction'}},\n",
        "   {'data': {'id': '2',\n",
        "     'name': 'M_glu_DASH_DASH_DASH_L_m',\n",
-       "     'type': 'metabolite'},\n",
-       "    'position': {'x': 23.33412428901167, 'y': -227.66701028273422}},\n",
-       "   {'data': {'id': '3', 'name': 'M_10fthf7glu_m', 'type': 'metabolite'},\n",
-       "    'position': {'x': -104.71332858421437, 'y': -240.9211592456342}},\n",
-       "   {'data': {'id': '4', 'name': 'M_pi_m', 'type': 'metabolite'},\n",
-       "    'position': {'x': -0.3878720674612843, 'y': -37.93311876875062}},\n",
-       "   {'data': {'id': '5', 'name': 'R_PPCOACm', 'type': 'reaction'},\n",
-       "    'position': {'x': -77.70848017164714, 'y': 46.96619058333192}},\n",
-       "   {'data': {'id': '6', 'name': 'R_SUCOAS1m', 'type': 'reaction'},\n",
-       "    'position': {'x': 50.46770142731861, 'y': 60.35396673125726}},\n",
-       "   {'data': {'id': '7', 'name': 'R_SUCOASm', 'type': 'reaction'},\n",
-       "    'position': {'x': 113.59003622644504, 'y': -50.848780926465366}}]}}"
+       "     'type': 'metabolite'}},\n",
+       "   {'data': {'id': '3', 'name': 'M_10fthf7glu_m', 'type': 'metabolite'}},\n",
+       "   {'data': {'id': '4', 'name': 'M_pi_m', 'type': 'metabolite'}},\n",
+       "   {'data': {'id': '5', 'name': 'R_PPCOACm', 'type': 'reaction'}},\n",
+       "   {'data': {'id': '6', 'name': 'R_SUCOAS1m', 'type': 'reaction'}},\n",
+       "   {'data': {'id': '7', 'name': 'R_SUCOASm', 'type': 'reaction'}}]}}"
       ]
      },
-     "execution_count": 262,
+     "execution_count": 426,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "gjson = from_igraph(g, gLayout)\n",
+    "gjson = from_igraph(g)\n",
     "gjson"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 427,
    "metadata": {
     "collapsed": false
    },
@@ -303,6 +350,7 @@
     "import ipywidgets as widgets\n",
     "import json\n",
     "import time\n",
+    "import os.path\n",
     "from IPython.display import display\n",
     "from traitlets import Int, Unicode, Tuple, CInt, Dict, validate, observe\n",
     "\n",
@@ -368,6 +416,14 @@
     "      self.msgFromKernel = json.dumps({\"cmd\": \"setPosition\", \"status\": \"request\", \"callback\": \"\", \n",
     "                                       \"payload\": tblPos});\n",
     "       \n",
+    "    def loadStyleFile(self, filename):\n",
+    "      if(not os.path.isfile(filename)):\n",
+    "        print(\"file '%s' not found\" % filename)\n",
+    "        return;\n",
+    "      self._resetMessage();\n",
+    "      self.msgFromKernel = json.dumps({\"cmd\": \"loadStyleFile\", \"status\": \"request\", \"callback\": \"\", \n",
+    "                                       \"payload\": filename});\n",
+    "        \n",
     "    def layout(self, name):\n",
     "      self._resetMessage();\n",
     "      self.msgFromKernel = json.dumps({\"cmd\": \"layout\", \"status\": \"request\", \"callback\": \"\", \"payload\": name});\n",
@@ -398,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 428,
    "metadata": {
     "collapsed": false
    },
@@ -601,6 +657,10 @@
        "                  var tag=\"[id='\" + e.id + \"']\";\n",
        "                  cy.$(tag).position({x: e.x, y:e.y});\n",
        "                  });\n",
+       "                break;\n",
+       "              case 'loadStyleFile':\n",
+       "                var styleFile = msg.payload;\n",
+       "                this.loadStyle(styleFile);\n",
        "                break;\n",
        "              case 'fit':\n",
        "                 var margin = msg.payload;\n",
@@ -872,6 +932,10 @@
     "                  cy.$(tag).position({x: e.x, y:e.y});\n",
     "                  });\n",
     "                break;\n",
+    "              case 'loadStyleFile':\n",
+    "                var styleFile = msg.payload;\n",
+    "                this.loadStyle(styleFile);\n",
+    "                break;\n",
     "              case 'fit':\n",
     "                 var margin = msg.payload;\n",
     "                 console.log(\"fit with margin: \" + margin)\n",
@@ -939,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 429,
    "metadata": {
     "collapsed": false
    },
@@ -950,14 +1014,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 430,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
      "data": {
-      "application/vnd.jupyter.widget": "92ab3c453bbe4ee3b47dd5511e898a3e"
+      "application/vnd.jupyter.widget": "bdb9da9dedf3409fba102dff1c38c7c3"
      },
      "metadata": {},
      "output_type": "display_data"
@@ -969,7 +1033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 431,
    "metadata": {
     "collapsed": false
    },
@@ -980,7 +1044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": 432,
    "metadata": {
     "collapsed": false
    },
@@ -992,7 +1056,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 438,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "cy.loadStyleFile(\"style2.js\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 401,
    "metadata": {
     "collapsed": true
    },
@@ -1007,19 +1091,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": 404,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "cy.setPosition(g.layout(\"circle\"))\n",
+    "cy.setPosition(g.layout(\"reingold_tilford\"))\n",
     "cy.fit(100)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 403,
    "metadata": {
     "collapsed": false
    },
@@ -1049,7 +1133,7 @@
     "   layout = g.layout(strategy)\n",
     "   cy.setPosition(layout)\n",
     "   cy.fit(100)\n",
-    "   time.sleep(1)"
+    "   time.sleep(3)"
    ]
   },
   {
