--- a/self-contained-notebooks/simple/simple.ipynb
+++ b/self-contained-notebooks/simple/simple.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 389,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -167,181 +167,165 @@
      "data": {
       "text/plain": [
        "{'data': {},\n",
-       " 'elements': {'edges': [{'data': {'source': '0', 'target': '1'}},\n",
-       "   {'data': {'source': '1', 'target': '2'}},\n",
-       "   {'data': {'source': '1', 'target': '3'}},\n",
-       "   {'data': {'source': '1', 'target': '4'}},\n",
-       "   {'data': {'source': '4', 'target': '5'}},\n",
-       "   {'data': {'source': '4', 'target': '6'}},\n",
-       "   {'data': {'source': '4', 'target': '7'}}],\n",
-       "  'nodes': [{'data': {'id': '0', 'name': 'M_10fthf6glu_m'}},\n",
-       "   {'data': {'id': '1', 'name': 'R_FPGS9m'}},\n",
-       "   {'data': {'id': '2', 'name': 'M_glu_DASH_DASH_DASH_L_m'}},\n",
-       "   {'data': {'id': '3', 'name': 'M_10fthf7glu_m'}},\n",
-       "   {'data': {'id': '4', 'name': 'M_pi_m'}},\n",
-       "   {'data': {'id': '5', 'name': 'R_PPCOACm'}},\n",
-       "   {'data': {'id': '6', 'name': 'R_SUCOAS1m'}},\n",
-       "   {'data': {'id': '7', 'name': 'R_SUCOASm'}}]}}"
+       " 'elements': {'edges': [{'data': {'edgeType': 'consumes',\n",
+       "     'flux': 876,\n",
+       "     'source': '2',\n",
+       "     'target': '9'}},\n",
+       "   {'data': {'edgeType': 'consumes',\n",
+       "     'flux': 699,\n",
+       "     'source': '2',\n",
+       "     'target': '7'}},\n",
+       "   {'data': {'edgeType': 'produces',\n",
+       "     'flux': 124,\n",
+       "     'source': '2',\n",
+       "     'target': '14'}},\n",
+       "   {'data': {'edgeType': 'catalyzes',\n",
+       "     'flux': 51,\n",
+       "     'source': '2',\n",
+       "     'target': '20'}},\n",
+       "   {'data': {'edgeType': 'consumes',\n",
+       "     'flux': 374,\n",
+       "     'source': '9',\n",
+       "     'target': '21'}},\n",
+       "   {'data': {'edgeType': 'consumes',\n",
+       "     'flux': 928,\n",
+       "     'source': '19',\n",
+       "     'target': '21'}},\n",
+       "   {'data': {'edgeType': 'produces',\n",
+       "     'flux': 112,\n",
+       "     'source': '17',\n",
+       "     'target': '21'}},\n",
+       "   {'data': {'edgeType': 'catalyzes',\n",
+       "     'flux': 325,\n",
+       "     'source': '21',\n",
+       "     'target': '23'}},\n",
+       "   {'data': {'edgeType': 'catalyzes',\n",
+       "     'flux': 914,\n",
+       "     'source': '1',\n",
+       "     'target': '21'}},\n",
+       "   {'data': {'edgeType': 'consumes',\n",
+       "     'flux': 431,\n",
+       "     'source': '12',\n",
+       "     'target': '14'}},\n",
+       "   {'data': {'edgeType': 'consumes',\n",
+       "     'flux': 192,\n",
+       "     'source': '12',\n",
+       "     'target': '16'}},\n",
+       "   {'data': {'edgeType': 'produces',\n",
+       "     'flux': 58,\n",
+       "     'source': '12',\n",
+       "     'target': '22'}},\n",
+       "   {'data': {'edgeType': 'produces',\n",
+       "     'flux': 55,\n",
+       "     'source': '12',\n",
+       "     'target': '24'}},\n",
+       "   {'data': {'edgeType': 'catalyzes',\n",
+       "     'flux': 216,\n",
+       "     'source': '3',\n",
+       "     'target': '12'}},\n",
+       "   {'data': {'edgeType': 'catalyzes',\n",
+       "     'flux': 529,\n",
+       "     'source': '10',\n",
+       "     'target': '12'}},\n",
+       "   {'data': {'edgeType': 'consumes',\n",
+       "     'flux': 583,\n",
+       "     'source': '0',\n",
+       "     'target': '25'}},\n",
+       "   {'data': {'edgeType': 'consumes',\n",
+       "     'flux': 720,\n",
+       "     'source': '0',\n",
+       "     'target': '18'}},\n",
+       "   {'data': {'edgeType': 'produces',\n",
+       "     'flux': 307,\n",
+       "     'source': '0',\n",
+       "     'target': '6'}},\n",
+       "   {'data': {'edgeType': 'consumes',\n",
+       "     'flux': 766,\n",
+       "     'source': '0',\n",
+       "     'target': '8'}},\n",
+       "   {'data': {'edgeType': 'catalyzes',\n",
+       "     'flux': 222,\n",
+       "     'source': '0',\n",
+       "     'target': '15'}},\n",
+       "   {'data': {'edgeType': 'consumes',\n",
+       "     'flux': 21,\n",
+       "     'source': '6',\n",
+       "     'target': '13'}},\n",
+       "   {'data': {'edgeType': 'produces',\n",
+       "     'flux': 629,\n",
+       "     'source': '4',\n",
+       "     'target': '13'}}],\n",
+       "  'nodes': [{'data': {'id': '0', 'name': 'R4', 'type': 'reaction'}},\n",
+       "   {'data': {'id': '1', 'name': 'g3', 'type': 'gene'}},\n",
+       "   {'data': {'id': '2', 'name': 'R1', 'type': 'reaction'}},\n",
+       "   {'data': {'id': '3', 'name': 'g4', 'type': 'gene'}},\n",
+       "   {'data': {'id': '4', 'name': 'z1', 'type': 'metabolite'}},\n",
+       "   {'data': {'id': '5', 'name': 'orphan2', 'type': 'metabolite'}},\n",
+       "   {'data': {'id': '6', 'name': 'z', 'type': 'metabolite'}},\n",
+       "   {'data': {'id': '7', 'name': 'b', 'type': 'metabolite'}},\n",
+       "   {'data': {'id': '8', 'name': 'w', 'type': 'metabolite'}},\n",
+       "   {'data': {'id': '9', 'name': 'a', 'type': 'metabolite'}},\n",
+       "   {'data': {'id': '10', 'name': 'g5', 'type': 'gene'}},\n",
+       "   {'data': {'id': '11', 'name': 'orphan1', 'type': 'metabolite'}},\n",
+       "   {'data': {'id': '12', 'name': 'R3', 'type': 'reaction'}},\n",
+       "   {'data': {'id': '13', 'name': 'R5', 'type': 'reaction'}},\n",
+       "   {'data': {'id': '14', 'name': 'c', 'type': 'metabolite'}},\n",
+       "   {'data': {'id': '15', 'name': 'g6', 'type': 'gene'}},\n",
+       "   {'data': {'id': '16', 'name': 'f', 'type': 'metabolite'}},\n",
+       "   {'data': {'id': '17', 'name': 'e', 'type': 'metabolite'}},\n",
+       "   {'data': {'id': '18', 'name': 'y', 'type': 'metabolite'}},\n",
+       "   {'data': {'id': '19', 'name': 'd', 'type': 'metabolite'}},\n",
+       "   {'data': {'id': '20', 'name': 'g1', 'type': 'gene'}},\n",
+       "   {'data': {'id': '21', 'name': 'R2', 'type': 'reaction'}},\n",
+       "   {'data': {'id': '22', 'name': 'h', 'type': 'metabolite'}},\n",
+       "   {'data': {'id': '23', 'name': 'g2', 'type': 'gene'}},\n",
+       "   {'data': {'id': '24', 'name': 'i', 'type': 'metabolite'}},\n",
+       "   {'data': {'id': '25', 'name': 'x', 'type': 'metabolite'}}]}}"
       ]
      },
-     "execution_count": 389,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from igraph import *\n",
-    "lines = open(\"test.tsv\").readlines()\n",
-    "abRelations = []\n",
+    "import random\n",
+    "\n",
+    "networkFile = \"toynetwork.tsv\"\n",
+    "nodeAttributesFile = \"type.noa\"\n",
+    "lines = open(\"toynetwork.tsv\").readlines()\n",
+    "tbl_rel = []\n",
     "for line in lines:\n",
-    "    abRelations.append(line.rstrip(\"\\n\").split(\"\\t\"))\n",
-    "g = Graph.TupleList(abRelations)\n",
+    "   tokens = line.rstrip(\"\\n\").split(\"\\t\")\n",
+    "   tokens = [x.strip() for x in tokens]\n",
+    "   if(len(tokens) == 3):\n",
+    "      tbl_rel.append(tokens)\n",
+    "\n",
+    "lines = open(\"type.noa\").readlines()\n",
+    "nodeTypes={}\n",
+    "for line in lines:\n",
+    "   (node, type) = line.rstrip(\"\\n\").split(\"\\t\")\n",
+    "   nodeTypes[node.strip()] = type.strip()\n",
+    "\n",
+    "g = Graph()\n",
+    "nodeNames = [x for x in iter(nodeTypes)]\n",
+    "nodeTypeValues = [x for x in nodeTypes.values()]\n",
+    "\n",
+    "g.add_vertices(nodeNames)\n",
+    "g.vs['type'] = nodeTypeValues\n",
+    "for row in tbl_rel:\n",
+    "  g.add_edge(row[0], row[2])\n",
+    "\n",
+    "g.es['edgeType'] = [x[1] for x in tbl_rel]\n",
+    "\n",
+    "g.es()['flux'] = random.sample(range(0, 1000), len(g.es()))\n",
     "from_igraph(g)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 390,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "import random\n",
-    "len(g.es())\n",
-    "g.es()['flux'] = random.sample(range(0, 1000), len(g.es()))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 422,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sourceNode: M_10fthf6glu_m\n",
-      "sourceNode: R_FPGS9m\n",
-      "sourceNode: R_FPGS9m\n",
-      "sourceNode: R_FPGS9m\n",
-      "sourceNode: M_pi_m\n",
-      "sourceNode: M_pi_m\n",
-      "sourceNode: M_pi_m\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "['substrateFor',\n",
-       " 'produces',\n",
-       " 'produces',\n",
-       " 'produces',\n",
-       " 'substrateFor',\n",
-       " 'substrateFor',\n",
-       " 'substrateFor']"
-      ]
-     },
-     "execution_count": 422,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "for edge in g.es:\n",
-    "   sourceNode = g.vs[edge.tuple[0]]['name']\n",
-    "   print(\"sourceNode: %s\" % sourceNode)\n",
-    "   if(re.search(\"^M_\", sourceNode)):\n",
-    "      edge['edgeType'] = 'substrateFor'\n",
-    "   else:\n",
-    "      edge['edgeType'] = 'produces'\n",
-    "g.es()['edgeType']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 423,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "\n",
-    "metabolites = [i for i,j in enumerate(g.vs['name']) if re.search(\"^M_\", j)]\n",
-    "reactions = [i for i,j in enumerate(g.vs['name']) if re.search(\"^R_\", j)]\n",
-    "g.vs()[metabolites]['type'] = \"metabolite\"\n",
-    "g.vs()[reactions]['type'] = \"reaction\"\n",
-    "gLayout = g.layout(\"kk\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 426,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'data': {},\n",
-       " 'elements': {'edges': [{'data': {'edgeType': 'substrateFor',\n",
-       "     'flux': 959,\n",
-       "     'source': '0',\n",
-       "     'target': '1'}},\n",
-       "   {'data': {'edgeType': 'produces',\n",
-       "     'flux': 235,\n",
-       "     'source': '1',\n",
-       "     'target': '2'}},\n",
-       "   {'data': {'edgeType': 'produces',\n",
-       "     'flux': 944,\n",
-       "     'source': '1',\n",
-       "     'target': '3'}},\n",
-       "   {'data': {'edgeType': 'produces',\n",
-       "     'flux': 169,\n",
-       "     'source': '1',\n",
-       "     'target': '4'}},\n",
-       "   {'data': {'edgeType': 'substrateFor',\n",
-       "     'flux': 421,\n",
-       "     'source': '4',\n",
-       "     'target': '5'}},\n",
-       "   {'data': {'edgeType': 'substrateFor',\n",
-       "     'flux': 326,\n",
-       "     'source': '4',\n",
-       "     'target': '6'}},\n",
-       "   {'data': {'edgeType': 'substrateFor',\n",
-       "     'flux': 533,\n",
-       "     'source': '4',\n",
-       "     'target': '7'}}],\n",
-       "  'nodes': [{'data': {'id': '0',\n",
-       "     'name': 'M_10fthf6glu_m',\n",
-       "     'type': 'metabolite'}},\n",
-       "   {'data': {'id': '1', 'name': 'R_FPGS9m', 'type': 'reaction'}},\n",
-       "   {'data': {'id': '2',\n",
-       "     'name': 'M_glu_DASH_DASH_DASH_L_m',\n",
-       "     'type': 'metabolite'}},\n",
-       "   {'data': {'id': '3', 'name': 'M_10fthf7glu_m', 'type': 'metabolite'}},\n",
-       "   {'data': {'id': '4', 'name': 'M_pi_m', 'type': 'metabolite'}},\n",
-       "   {'data': {'id': '5', 'name': 'R_PPCOACm', 'type': 'reaction'}},\n",
-       "   {'data': {'id': '6', 'name': 'R_SUCOAS1m', 'type': 'reaction'}},\n",
-       "   {'data': {'id': '7', 'name': 'R_SUCOASm', 'type': 'reaction'}}]}}"
-      ]
-     },
-     "execution_count": 426,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "gjson = from_igraph(g)\n",
-    "gjson"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 427,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -354,7 +338,7 @@
     "from IPython.display import display\n",
     "from traitlets import Int, Unicode, Tuple, CInt, Dict, validate, observe\n",
     "\n",
-    "class cyjsWidget(widgets.DOMWidget):\n",
+    "class cyjs(widgets.DOMWidget):\n",
     "    \n",
     "    _view_name = Unicode('CyjsView').tag(sync=True)\n",
     "    _view_module = Unicode('cyjs').tag(sync=True)\n",
@@ -454,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 428,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -1003,25 +987,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 429,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "cy = cyjsWidget()"
+    "cy = cyjs()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 430,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
      "data": {
-      "application/vnd.jupyter.widget": "bdb9da9dedf3409fba102dff1c38c7c3"
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a8a48d4ffa86415eba5abbe364ddb558"
+      }
      },
      "metadata": {},
      "output_type": "display_data"
@@ -1033,39 +1019,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 431,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
+    "cy.deleteGraph()\n",
     "cy.addGraph(g)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 432,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "cy.layout(\"breadthfirst\")\n",
-    "cy.fit(100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 438,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -1076,7 +1042,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 401,
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "cy.setPosition(g.layout(\"reingold_tilford\"))\n",
+    "cy.fit(100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
    "metadata": {
     "collapsed": true
    },
@@ -1091,19 +1069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 404,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "cy.setPosition(g.layout(\"reingold_tilford\"))\n",
-    "cy.fit(100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 403,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false
    },
@@ -1182,8 +1148,9 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -1198,6 +1165,49 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.5.2"
+  },
+  "widgets": {
+   "state": {
+    "0d26d946e1cc4ad79f1a0cb94615adb3": {
+     "model_module": "jupyter-js-widgets",
+     "model_module_version": "*",
+     "model_name": "DOMWidgetModel",
+     "state": {
+      "_dom_classes": [],
+      "_model_module": "jupyter-js-widgets",
+      "_model_module_version": "*",
+      "_model_name": "DOMWidgetModel",
+      "_view_module": "cyjs",
+      "_view_module_version": "*",
+      "_view_name": "CyjsView",
+      "frameHeight": 300,
+      "frameWidth": 400,
+      "msgFromBrowser": "{}",
+      "msgFromKernel": "{\"cmd\": \"fit\", \"callback\": \"\", \"status\": \"request\", \"payload\": 100}",
+      "msg_throttle": 1
+     }
+    },
+    "a8a48d4ffa86415eba5abbe364ddb558": {
+     "model_module": "jupyter-js-widgets",
+     "model_module_version": "*",
+     "model_name": "DOMWidgetModel",
+     "state": {
+      "_dom_classes": [],
+      "_model_module": "jupyter-js-widgets",
+      "_model_module_version": "*",
+      "_model_name": "DOMWidgetModel",
+      "_view_module": "cyjs",
+      "_view_module_version": "*",
+      "_view_name": "CyjsView",
+      "frameHeight": 300,
+      "frameWidth": 400,
+      "msgFromBrowser": "{}",
+      "msgFromKernel": "{\"cmd\": \"fit\", \"callback\": \"\", \"status\": \"request\", \"payload\": 100}",
+      "msg_throttle": 1
+     }
+    }
+   },
+   "version": "2.0.10"
   }
  },
  "nbformat": 4,
