--- a/self-contained-notebooks/simple/simple.ipynb
+++ b/self-contained-notebooks/simple/simple.ipynb
@@ -259,6 +259,16 @@
     "                                                    \"nodeNames\": nodeNames,\n",
     "                                                    \"values\": values}})\n",
     "\n",
+    "    def setEdgeAttributes(self, attributeName, sourceNames, targetNames, edgeTypes, values):\n",
+    "      self._resetMessage();\n",
+    "      self. msgFromKernel = json.dumps({\"cmd\": \"setEdgeAttributes\", \"status\": \"request\",\n",
+    "                                        \"callback\": \"\", \n",
+    "                                        \"payload\": {\"attributeName\": attributeName,\n",
+    "                                                    \"sourceNames\": sourceNames,\n",
+    "                                                    \"targetNames\": targetNames,\n",
+    "                                                    \"edgeTypes\": edgeTypes,\n",
+    "                                                    \"values\": values}})\n",
+    "\n",
     "    @observe('msgFromBrowser')\n",
     "    def msg_arrived(self, change):\n",
     "       self.status += \"msgFromBrowser has arrived: %f\\n\" % time.time()\n",
@@ -1006,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 155,
    "metadata": {
     "collapsed": false
    },
@@ -1076,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 144,
    "metadata": {
     "collapsed": false
    },
@@ -1084,10 +1094,10 @@
     {
      "data": {
       "text/plain": [
-       "[]"
+       "['4']"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1098,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 145,
    "metadata": {
     "collapsed": true
    },
@@ -1109,7 +1119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 146,
    "metadata": {
     "collapsed": false
    },
@@ -1171,7 +1181,7 @@
        "R5    563    801    234"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 146,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1184,7 +1194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 147,
    "metadata": {
     "collapsed": false
    },
@@ -1196,7 +1206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 148,
    "metadata": {
     "collapsed": false
    },
@@ -1207,7 +1217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 149,
    "metadata": {
     "collapsed": false
    },
@@ -1356,8 +1366,8 @@
       "_view_name": "CyjsView",
       "frameHeight": 300,
       "frameWidth": 400,
-      "msgFromBrowser": "{\"cmd\":\"updateSelectedNodes\",\"status\":\"request\",\"callback\":\"\",\"payload\":[\"4\"]}",
-      "msgFromKernel": "{\"callback\":\"\",\"payload\":{\"nodeNames\":[\"R1\",\"R2\",\"R3\",\"R4\",\"R5\"],\"values\":[477,44,799,368,563],\"attributeName\":\"flux\"},\"status\":\"request\",\"cmd\":\"setNodeAttributes\"}",
+      "msgFromBrowser": "{\"cmd\":\"updateSelectedNodes\",\"status\":\"request\",\"callback\":\"\",\"payload\":[\"2\"]}",
+      "msgFromKernel": "{\"callback\":\"\",\"payload\":\"style2.js\",\"status\":\"request\",\"cmd\":\"loadStyleFile\"}",
       "msg_throttle": 1
      }
     }
