added py setEdgeAttributes, no js yet

--- a/self-contained-notebooks/simple/simple.ipynb
+++ b/self-contained-notebooks/simple/simple.ipynb
@@ -260,7 +260,7 @@
     "                                                    \"values\": values}})\n",
     "\n",
     "    def setEdgeAttributes(self, attributeName, sourceNames, targetNames, edgeTypes, values):\n",
-    "      self._resetMessage();\n",
+    "      self._resetMessage(); # ho\n",
     "      self. msgFromKernel = json.dumps({\"cmd\": \"setEdgeAttributes\", \"status\": \"request\",\n",
     "                                        \"callback\": \"\", \n",
     "                                        \"payload\": {\"attributeName\": attributeName,\n",
