edge attributes, now js configurable: rendering working well

--- a/self-contained-notebooks/simple/simple.ipynb
+++ b/self-contained-notebooks/simple/simple.ipynb
@@ -33,6 +33,20 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# ensure the library is available\n",
+    "import requests\n",
+    "r = requests.get('http://localhost:8099/js/cytoscape-2.7.10.js')\n",
+    "assert(r.status_code == 200)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
     "collapsed": true
    },
    "outputs": [],
@@ -42,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -158,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -200,14 +214,14 @@
     "      self._resetMessage();\n",
     "      self.msgFromKernel = json.dumps({\"cmd\": \"deleteGraph\", \"status\": \"request\", \"callback\": \"\", \"payload\": \"\"});\n",
     "     \n",
-    "    def nodeNameToID(self, g, name):\n",
-    "       keys = g.vs['name']\n",
-    "       vals = range(0, len(keys))\n",
-    "       map = dict.fromkeys(keys, None)\n",
-    "       for i in range(0,len(keys)):\n",
-    "          name = g.vs['name'][i]\n",
-    "          map[name] = i\n",
-    "       return(map[name])\n",
+    "    #def nodeNameToID(self, g, name):\n",
+    "    #   keys = g.vs['name']\n",
+    "    #   vals = range(0, len(keys))\n",
+    "    #   map = dict.fromkeys(keys, None)\n",
+    "    #   for i in range(0,len(keys)):\n",
+    "    #      name = g.vs['name'][i]\n",
+    "    #      map[name] = i\n",
+    "    #   return(map[name])\n",
     "\n",
     "    \n",
     "    def setSize(self, width, height):\n",
@@ -274,12 +288,20 @@
     "                                                    \"values\": values}})\n",
     "\n",
     "    def setEdgeAttributes(self, attributeName, sourceNames, targetNames, edgeTypes, values):\n",
-    "      self._resetMessage(); # ho\n",
+    "        # g to be a class member variable?\n",
+    "        # nodeMap also, with vigilance for modification of underlying graph?\n",
+    "        # id lookup a member function?\n",
+    "      names = g.vs['name']\n",
+    "      ids = [g.vs.find(name).index for name in g.vs['name']]\n",
+    "      nodeMap = dict(zip(names, ids))\n",
+    "      sourceIDs = [nodeMap[name] for name in sourceNames]\n",
+    "      targetIDs = [nodeMap[name] for name in targetNames]\n",
+    "      self._resetMessage(); \n",
     "      self. msgFromKernel = json.dumps({\"cmd\": \"setEdgeAttributes\", \"status\": \"request\",\n",
     "                                        \"callback\": \"\", \n",
     "                                        \"payload\": {\"attributeName\": attributeName,\n",
-    "                                                    \"sourceNames\": sourceNames,\n",
-    "                                                    \"targetNames\": targetNames,\n",
+    "                                                    \"sourceNames\": sourceIDs,\n",
+    "                                                    \"targetNames\": targetIDs,\n",
     "                                                    \"edgeTypes\": edgeTypes,\n",
     "                                                    \"values\": values}})\n",
     "\n",
@@ -303,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 135,
    "metadata": {
     "collapsed": false
    },
@@ -492,16 +514,15 @@
        "         }, // setNodeAttributes\n",
        "        \n",
        "        setEdgeAttributes: function(attributeName, sourceNodes, targetNodes, edgeTypes, attributeValues){\n",
-       "             \n",
        "            for(var i=0; i < sourceNodes.length; i++){\n",
-       "              debugger;\n",
        "              var selectorString = \"edge[source='\" + sourceNodes[i] + \"'][target='\" + targetNodes[i] +\n",
        "                                   \"'][edgeType='\" + edgeTypes[i] + \"']\";\n",
        "              console.log(selectorString);\n",
-       "              console.log(\"eda value: \" + values[i]);\n",
+       "              console.log(\"eda value: \" + attributeValues[i]);\n",
        "              var dataObj = cy.edges().filter(selectorString).data();\n",
        "              if(dataObj != undefined){\n",
-       "                 Object.defineProperty(dataObj, attributeName, {value: attributeValues[i]});\n",
+       "                 Object.defineProperty(dataObj, attributeName, \n",
+       "                                       {value: attributeValues[i], configurable: true});\n",
        "                 }                  \n",
        "             } // for i\n",
        "          }, // setEdgeAttributes\n",
@@ -550,6 +571,7 @@
        "                var targetNames = msg.payload.targetNames;\n",
        "                var edgeTypes = msg.payload.edgeTypes;\n",
        "                var attributeValues = msg.payload.values;\n",
+       "                console.log(\"js setEdgeAttributes, count = \" + sourceNames.length);\n",
        "                if(typeof(sourceNames) == \"string\") sourceNames = [sourceNames];\n",
        "                if(typeof(targetNames) == \"string\") targetNames = [targetNames];\n",
        "                if(typeof(edgeTypes) == \"string\") edgeTypes = [edgeTypes];\n",
@@ -823,16 +845,15 @@
     "         }, // setNodeAttributes\n",
     "        \n",
     "        setEdgeAttributes: function(attributeName, sourceNodes, targetNodes, edgeTypes, attributeValues){\n",
-    "             \n",
     "            for(var i=0; i < sourceNodes.length; i++){\n",
-    "              debugger;\n",
     "              var selectorString = \"edge[source='\" + sourceNodes[i] + \"'][target='\" + targetNodes[i] +\n",
     "                                   \"'][edgeType='\" + edgeTypes[i] + \"']\";\n",
     "              console.log(selectorString);\n",
-    "              console.log(\"eda value: \" + values[i]);\n",
+    "              console.log(\"eda value: \" + attributeValues[i]);\n",
     "              var dataObj = cy.edges().filter(selectorString).data();\n",
     "              if(dataObj != undefined){\n",
-    "                 Object.defineProperty(dataObj, attributeName, {value: attributeValues[i]});\n",
+    "                 Object.defineProperty(dataObj, attributeName, \n",
+    "                                       {value: attributeValues[i], configurable: true});\n",
     "                 }                  \n",
     "             } // for i\n",
     "          }, // setEdgeAttributes\n",
@@ -881,6 +902,7 @@
     "                var targetNames = msg.payload.targetNames;\n",
     "                var edgeTypes = msg.payload.edgeTypes;\n",
     "                var attributeValues = msg.payload.values;\n",
+    "                console.log(\"js setEdgeAttributes, count = \" + sourceNames.length);\n",
     "                if(typeof(sourceNames) == \"string\") sourceNames = [sourceNames];\n",
     "                if(typeof(targetNames) == \"string\") targetNames = [targetNames];\n",
     "                if(typeof(edgeTypes) == \"string\") edgeTypes = [edgeTypes];\n",
@@ -966,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 136,
    "metadata": {
     "collapsed": false
    },
@@ -977,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 137,
    "metadata": {
     "collapsed": false
    },
@@ -1000,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 138,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -1024,7 +1046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 139,
    "metadata": {
     "collapsed": false
    },
@@ -1037,17 +1059,12 @@
     "  g.add_edge(source, target)\n",
     "\n",
     "g.es['edgeType'] = [x[2] for x in tbl_rel]\n",
-    "\n",
-    "g.es()['flux'] = random.sample(range(0, 1000), len(g.es()))\n",
-    "\n",
-    "# [x[1] for x in tbl_rel]\n",
-    "\n",
-    "#from_igraph(g)"
+    "#g.es()['flux'] = random.sample(range(0, 1000), len(g.es()))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 140,
    "metadata": {
     "collapsed": false
    },
@@ -1058,7 +1075,7 @@
        "5"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1069,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 141,
    "metadata": {
     "collapsed": false
    },
@@ -1077,7 +1094,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7e3a531d528b4920adf87d409da414fd"
+       "model_id": "8591ed9d9ca849049ff856af1265e20d"
       }
      },
      "metadata": {},
@@ -1090,29 +1107,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 142,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "25"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "cy.nodeNameToID(g, \"R3\")"
+    "#cy.nodeNameToID(g, \"R3\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 143,
    "metadata": {
     "collapsed": false
    },
@@ -1124,7 +1130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 161,
    "metadata": {
     "collapsed": false
    },
@@ -1135,7 +1141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 145,
    "metadata": {
     "collapsed": true
    },
@@ -1147,7 +1153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 146,
    "metadata": {
     "collapsed": false
    },
@@ -1164,7 +1170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 147,
    "metadata": {
     "collapsed": true
    },
@@ -1195,7 +1201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 149,
    "metadata": {
     "collapsed": false
    },
@@ -1203,10 +1209,10 @@
     {
      "data": {
       "text/plain": [
-       "[]"
+       "['R3']"
       ]
      },
-     "execution_count": 208,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1217,7 +1223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 150,
    "metadata": {
     "collapsed": true
    },
@@ -1228,7 +1234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 151,
    "metadata": {
     "collapsed": false
    },
@@ -1290,7 +1296,7 @@
        "R5    563    801    234"
       ]
      },
-     "execution_count": 210,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1303,7 +1309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 152,
    "metadata": {
     "collapsed": false
    },
@@ -1315,7 +1321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 153,
    "metadata": {
     "collapsed": false
    },
@@ -1326,7 +1332,7 @@
        "[477, 44, 799, 368, 563]"
       ]
      },
-     "execution_count": 212,
+     "execution_count": 153,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1338,7 +1344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 154,
    "metadata": {
     "collapsed": false
    },
@@ -1349,7 +1355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 155,
    "metadata": {
     "collapsed": false
    },
@@ -1539,7 +1545,7 @@
        "15     R5     z1  produces    759    218    600"
       ]
      },
-     "execution_count": 214,
+     "execution_count": 155,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1551,33 +1557,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 158,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[691, 556, 927, 181, 643, 96, 394, 587, 170, 7, 281, 197, 5, 518, 306, 600]"
-      ]
-     },
-     "execution_count": 215,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "sourceNodes = tbl_edgeFlux[\"source\"].tolist()\n",
     "targetNodes = tbl_edgeFlux[\"target\"].tolist()\n",
     "edgeTypes = tbl_edgeFlux[\"edgeType\"].tolist()\n",
-    "values = tbl_edgeFlux[\"cond3\"].tolist()\n",
-    "values\n"
+    "values = tbl_edgeFlux[\"cond3\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 159,
    "metadata": {
     "collapsed": true
    },
@@ -1698,7 +1692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 66,
    "metadata": {
     "collapsed": true
    },
@@ -1711,7 +1705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 67,
    "metadata": {
     "collapsed": false
    },
@@ -1722,13 +1716,36 @@
        "2"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "nodeMap[\"R3\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 7, 4, 11]"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nodes = [\"R1\", \"c\", \"R5\", \"g1\"]\n",
+    "[nodeMap[name] for name in nodes]"
    ]
   },
   {
@@ -1855,65 +1872,7 @@
    "version": "3.5.2"
   },
   "widgets": {
-   "state": {
-    "6b1be625f68a41409370089fc5e222b1": {
-     "model_module": "jupyter-js-widgets",
-     "model_module_version": "*",
-     "model_name": "DOMWidgetModel",
-     "state": {
-      "_dom_classes": [],
-      "_model_module": "jupyter-js-widgets",
-      "_model_module_version": "*",
-      "_model_name": "DOMWidgetModel",
-      "_view_module": "cyjs",
-      "_view_module_version": "*",
-      "_view_name": "CyjsView",
-      "frameHeight": 300,
-      "frameWidth": 400,
-      "msgFromBrowser": "{}",
-      "msgFromKernel": "{\"status\": \"request\", \"callback\": \"\", \"payload\": \"style2.js\", \"cmd\": \"loadStyleFile\"}",
-      "msg_throttle": 1
-     }
-    },
-    "7e3a531d528b4920adf87d409da414fd": {
-     "model_module": "jupyter-js-widgets",
-     "model_module_version": "*",
-     "model_name": "DOMWidgetModel",
-     "state": {
-      "_dom_classes": [],
-      "_model_module": "jupyter-js-widgets",
-      "_model_module_version": "*",
-      "_model_name": "DOMWidgetModel",
-      "_view_module": "cyjs",
-      "_view_module_version": "*",
-      "_view_name": "CyjsView",
-      "frameHeight": 300,
-      "frameWidth": 400,
-      "msgFromBrowser": "{\"cmd\":\"updateSelectedNodes\",\"status\":\"request\",\"callback\":\"\",\"payload\":[]}",
-      "msgFromKernel": "{\"status\": \"request\", \"callback\": \"\", \"payload\": 100, \"cmd\": \"fit\"}",
-      "msg_throttle": 1
-     }
-    },
-    "ba9a39fca85d43da9f9924f325f4b763": {
-     "model_module": "jupyter-js-widgets",
-     "model_module_version": "*",
-     "model_name": "DOMWidgetModel",
-     "state": {
-      "_dom_classes": [],
-      "_model_module": "jupyter-js-widgets",
-      "_model_module_version": "*",
-      "_model_name": "DOMWidgetModel",
-      "_view_module": "cyjs",
-      "_view_module_version": "*",
-      "_view_name": "CyjsView",
-      "frameHeight": 300,
-      "frameWidth": 400,
-      "msgFromBrowser": "{\"cmd\":\"updateSelectedNodes\",\"status\":\"request\",\"callback\":\"\",\"payload\":[\"R3\"]}",
-      "msgFromKernel": "{\"status\": \"request\", \"callback\": \"\", \"payload\": 200, \"cmd\": \"fitSelected\"}",
-      "msg_throttle": 1
-     }
-    }
-   },
+   "state": {},
    "version": "2.0.10"
   }
  },
