--- a/cyjs-jupyter/cyjs.ipynb
+++ b/cyjs-jupyter/cyjs.ipynb
@@ -2,19 +2,49 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "import cyjs\n",
-    "from IPython.display import display"
+    "from IPython.display import display, HTML"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       "    div#notebook-container    { width: 95%; }\n",
+       "    div#menubar-container     { width: 65%; }\n",
+       "    div#maintoolbar-container { width: 99%; }\n",
+       "</style>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(HTML(data=\"\"\"<style>\n",
+    "    div#notebook-container    { width: 95%; }\n",
+    "    div#menubar-container     { width: 65%; }\n",
+    "    div#maintoolbar-container { width: 99%; }\n",
+    "</style>\"\"\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -25,13 +55,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d54957cf23cd49dda653d27a975e128d"
+       "model_id": "71e239f272a94ea186424295d4cfc714"
       }
      },
      "metadata": {},
@@ -44,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -65,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -96,8 +126,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "cy.deleteGraph()\n",
@@ -106,6 +138,17 @@
     "kkLayout = g.layout(\"kk\")\n",
     "cy.setPosition(kkLayout)\n",
     "cy.fit(100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "cy.setHeight(1500)"
    ]
   },
   {
